--- a/styles.css
+++ b/styles.css
@@ -35,4 +35,11 @@ body{
   width: 90%;
   margin-left:30px;
   height:75%;
+  display:grid;
+  grid-template-columns: 20% 20% 20% 20% 20%;
+  grid-template-rows: 20% 20% 20% 20% 20%;
+}
+#content-box{
+  grid-column-start:2;
+  grid-column-end: 6;
 }
