--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,23 @@ h3{
   justify-content:space-between;
 }
 .start-activity{
-  background-color:grey;
+  background-color:#FCFCFC;
   color:black;
+  width:175px;
+  height:30px;
+  float:right;
+  margin-top:40px;
+  cursor:pointer;
+}
+input{
+  outline:none;
+}
+.aside-section{
+  text-align:center;
+}
+aside{
+  border-left: 5px solid #46424D;
+  grid-area: aside;
+  margin:0px;
+  padding: 0 0 0 20px;
 }
